--- a/less/helpers.less
+++ b/less/helpers.less
@@ -58,7 +58,7 @@
   &:hover {
     color: white;
   }
-  &:focus {
+  &:focus, &:active {
     color: white;
   }
   .glyphicon {
@@ -75,7 +75,7 @@
 }
 .orange-btn {
   background-color: @C2C-orange;
-  &:hover {
+  &:hover, &:active {
     background-color: #FF9416;
     transition: 0.1s;
   }
