--- a/less/viewdetails.less
+++ b/less/viewdetails.less
@@ -132,7 +132,7 @@
   height: 73%;
   margin-left: 3%;
   width: 91%;
-  padding-bottom: 266px;
+  padding-bottom: 200px;
   overflow: hidden;
 
   @media @phone {
